# counter-strike-82

server/: .gitignore  main.py  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 47d12e462af7_create_user_tables.py  efa5b5610486_create_tables.py
server/authentication/: auth.py
server/database/: database.py
server/exceptions/: app_exceptions.py
server/logger/: configuration.py  logging_middleware.py
server/models/: enums.py  models.py  user_models.py
server/routers/: players.py  teams.py  users.py
server/schemas/: player_schemas.py  team_schemas.py  token_schemas.py  user_schemas.py
server/services/: helpers.py  lineup_service.py  player_service.py  team_service.py  user_service.py
server/tests/: conftest.py  test_health.py  test_users.py
server/utils/: config.py
